--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "mishka",
+  "name": "calculator",
   "version": "0.1.0",
   "private": true,
-  "description": "Личный проект «Мишка» от HTML Academy",
+  "description": "Pet calculator",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "0.1.x",
     "autoprefixer": "6.7.x",
     "browser-sync": "^2.18.8",
     "css-mqpacker": "^5.0.1",
     "del": "^2.2.2",
-    "gulp": "3.9.1",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^3.2.0",
-    "gulp-less": "^3.3.0",
+    "gulp-less": "^3.5.0",
+    "gulp-livereload": "^4.0.2",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.3.0",
     "gulp-rename": "^1.2.2",
